fixed overflow problem.

--- a/css/style.css
+++ b/css/style.css
@@ -7,6 +7,7 @@ body {
   color: #222;
   margin: 0;
   padding: 0;
+  overflow: hidden;
   }
 h1,h2,h3,h4,h5,h6 {
   -webkit-font-smoothing: antialiased;
